hphp/hack/test/typecheck/function_pointer/reified_fun.php.exp
File "reified_fun.php", line 6, characters 3-7:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "reified_fun.php", line 3, characters 10-12:
  Definition is here
